hydroflow/tests/snapshots/surface_persist__persist@graphvis_dot.snap
---
source: hydroflow/tests/surface_persist.rs
expression: df.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([1, 2, 3])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) persist()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n3v1 [label="(n3v1) tee()", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n4v1 [label="(n4v1) for_each(|v| pull_tx.send(v).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n5v1 [label="(n5v1) persist()", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n6v1 [label="(n6v1) for_each(|v| push_tx.send(v).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n1v1 -> n2v1
        n2v1 -> n3v1
        n3v1 -> n4v1
        n3v1 -> n5v1
        n5v1 -> n6v1
        subgraph "cluster sg_1v1_var_my_tee" {
            label="var my_tee"
            n1v1
            n2v1
            n3v1
        }
    }
}

