hydroflow/tests/snapshots/surface_persist__persist_basic@graphvis_dot.snap
---
source: hydroflow/tests/surface_persist.rs
expression: hf.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([1])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) persist()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n3v1 [label="(n3v1) persist()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n1v1 -> n2v1
        n2v1 -> n3v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n4v1 [label="(n4v1) fold(0, |a, b| (a + b))", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n5v1 [label="(n5v1) for_each(|x| result_send.send(x).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n4v1 -> n5v1
    }
    n3v1 -> n6v1
    n6v1 [label="(n6v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n6v1 -> n4v1 [arrowhead=box, color=red]
}

