hydroflow/tests/snapshots/surface_persist__persist_basic@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_persist.rs
expression: hf.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff0,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <code>source_iter([1])</code>"/]:::pullClass
    2v1[\"(2v1) <code>persist()</code>"/]:::pullClass
    3v1[\"(3v1) <code>persist()</code>"/]:::pullClass
    1v1--->2v1
    2v1--->3v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    4v1[\"(4v1) <code>fold(0, |a, b| (a + b))</code>"/]:::pullClass
    5v1[/"(5v1) <code>for_each(|x| result_send.send(x).unwrap())</code>"\]:::pushClass
    4v1--->5v1
end
3v1--->6v1
6v1["(6v1) <code>handoff</code>"]:::otherClass
6v1===o4v1

